--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,9 @@
     background-color: crimson;
     margin: 0 auto;
 }
+
+header{
+    width: 100%;
+    height: 100px;
+    background-color: forestgreen;
+}
